# SEAL

./: .gitignore  README.md  setup.sh
mytest/: CMakeLists.txt  baseline.cpp  baseline.h  baseline_bench.cpp  ccmm.cpp  ccmm.h  coeff_modulus_config.cpp  coeff_modulus_config.h  coefficients_blas.cpp  coefficients_blas.h  coefficients_blas_bench.cpp  coefficients_seal.cpp  coefficients_seal.h  coefficients_seal_bench.cpp  cpmm.cpp  cpmm.h  cpscale.cpp  cpscale.h  digits.cpp  digits.h  digits_bench.cpp  example.cpp  example.h  plain_blas.cpp  plain_blas.h  plain_blas_bench.cpp  plain_omp.cpp  plain_omp.h  plain_omp_bench.cpp  plaintext.cpp  plaintext.h  results.txt  seal_config.json  tee-cpu.txt  tee.cpp  test.cpp  test.h  test_cpmm.cpp  utils.cpp  utils.h
native/bench/: CMakeLists.txt
native/examples/: CMakeLists.txt
